--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -3,11 +3,15 @@
 nav {
   background: #4056A1;
   color: #fff;
+  width: 100%;
   height: 120px;
   padding: 0 1.5em;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: fixed;
+  top: 0;
+  z-index: 9;
 }
 nav > span.tweeter-logo{
   font-family: "Bungee", sans-serif;
