--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -31,3 +31,24 @@ nav a.btn-new-tweet i.fa-solid{
   color: #f12;
   margin-top: 5px;
 }
+.scrool-to-top {
+  width: 50px;
+  height: 50px;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  z-index: 99;
+  background: #4056a1;
+  border-radius: 50%;
+  color: #fff;
+  text-decoration: none;
+  font-size: 20px;
+  opacity: 0;
+  transition: all 0.3s ease-in;
+}
+.scrool-to-top:hover{
+  cursor: pointer;
+}
