--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,8 +1,10 @@
-.new-tweet{
+@charset "UTF-8";
+.new-tweet {
   display: none;
   margin-bottom: 30px;
 }
-#tweet-text{
+
+#tweet-text {
   width: 100%;
   background-color: transparent;
   border: 0;
@@ -11,45 +13,52 @@
   margin: 5px 0 15px;
   outline: none;
 }
+
 .btn-tweet {
   background: #4056a1;
-  color: #fff;
+  color: #ffffff;
   font-family: "Bungee", sans-serif;
   border: 0;
   outline: none;
   padding: 6px 6px 4px;
   cursor: pointer;
 }
-.d-flex{
+
+.d-flex {
   display: flex;
 }
-.justify-content-between{
+
+.justify-content-between {
   justify-content: space-between;
 }
-.counter{
+
+.counter {
   font-family: "Bungee", sans-serif;
   color: #333;
   font-size: 24px;
 }
-.counter.error{
+.counter.error {
   color: #f12;
 }
+
 .tweet-error {
   background: #f12;
   margin-bottom: 35px;
   transition: all 0.3s ease-in;
   display: none;
-  color: #fff;
+  color: #ffffff;
   padding: 15px 20px;
   position: relative;
 }
+
 .tweet-error::before {
-  content: "\f071";
-  font-family: 'FontAwesome';
+  content: "";
+  font-family: "FontAwesome";
   margin-right: 10px;
 }
+
 .alert-close {
-  color: #fff;
+  color: #ffffff;
   position: absolute;
   right: 20px;
   top: 17px;
